# my_wat

./: .gitignore  README.md  config_example.yaml  pyproject.toml  settings.py
src/: interface.py
src/adapters/: base.py  openai.py  together.py
words/: dutch_words.json  english_words.json  russian_words.json
