[project]
name = "my-wat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=0.3.6",
    "langchain-together>=0.3.0",
    "langchain>=0.3.19",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "streamlit>=1.42.2",
]
